# rust-registry

./: .env  Cargo.toml  LICENSE-MIT  README.md  config.json  docker-compose.yml
certs/: pong.key  pong.pem
migrations/2023-06-17-201443_layers_and_manifests/: down.sql  up.sql
src/: api_objects.rs  authentication.rs  configuration.rs  db.rs  error.rs  ldap.rs  main.rs  perm.rs  schema.rs  utils.rs
