[package]
name = "rust-registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
sha2 = "0.10.6"
url = "2.2.2"
base64 = "0.21.0"
rustls = "0.20.8"
rustls-pemfile = "1.0.2"
futures-util = { version = "0.3", default-features = false }
actix-web = { version = "4.0.0-beta.11", features = ["rustls"] }
actix-tls = { version = "3.0.3", features = ["rustls"] }
actix-files = "0.6.2"
actix-cors = "0.6.4"
path-clean = "1.0.1"
env_logger = "0.10.0"
ring = "0.16.20"
hex = "0.4.3"
log = "0.4.17"

#tokio = { version = "1.15.0", features = ["full"] }
#hyper = { version = "^0.14.10", features = ["full"] }
#futures-core = { version = "0.3", default-features = false }
#futures-channel = "0.3"
#futures = { version = "0.3.27", features = ["compat"] }
