[package]
name = "rust-registry"
version = "0.1.0"
edition = "2021"

# enable feature ldap as default for this project
[features]
default = ["ldap"]
ldap = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-tls = { version = "3.0.3", features = ["rustls"] }
actix-web = { version = "4.0.0-beta.11", features = ["rustls"] }
actix-web-httpauth = "0.8.0"
async-trait = "0.1.68"
base64 = "0.21.0"
chrono = { version = "0.4.26", features = ["serde"] }
diesel = { version = "2.1.0", features = ["postgres", "extras"] }
diesel_migrations = { version = "2.1.0" }
dotenvy = "0.15.7"
env_logger = "0.10.0"
futures = "0.3.28"
futures-util = { version = "0.3", default-features = false }
hex = "0.4.3"
lazy_static = "1.4.0"
ldap3 = { version = "0.11.1", features = ["rustls"] }
log = "0.4.17"
mime = "0.3.17"
path-clean = "1.0.1"
r2d2 = "0.8.10"
regex = "1.7.3"
ring = "0.16.20"
rustls = "0.20.8"
rustls-pemfile = "1.0.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
sha2 = "0.10.6"
tokio = { version = "1.26.0", features = ["full"] }
tokio-stream = "0.1.12"
url = "2.2.2"
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
walkdir = "2"

[dev-dependencies]
ctor = "0.2.0"
testcontainers = "0.14.0"
